testdata/baselines/reference/submodule/compiler/reactReadonlyHOCAssignabilityReal.errors.txt
reactReadonlyHOCAssignabilityReal.tsx(2,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== reactReadonlyHOCAssignabilityReal.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    function myHigherOrderComponent<P>(Inner: React.ComponentClass<P & {name: string}>): React.ComponentClass<P> {
        return class OuterComponent extends React.Component<P> {
            render() {
                return <Inner {...this.props} name="Matt"/>;
            }
        };
    }